--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.6
   intl: ^0.17.0
+  flutter_section_list: ^1.1.0
+  flutter_slidable: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
