feat 습관추가화면 UI 구현

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   flutter_section_list: ^1.1.0
   flutter_slidable: ^1.3.0
+  flutter_colorpicker: ^1.0.3
 
 
 dev_dependencies:
