--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_section_list: ^1.1.0
   flutter_slidable: ^1.3.0
   flutter_colorpicker: ^1.0.3
+  fl_chart: ^0.55.0
 
 
 dev_dependencies:
