--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,7 +39,7 @@ dependencies:
   flutter_slidable: ^1.3.0
   flutter_colorpicker: ^1.0.3
   fl_chart: ^0.55.0
-
+  realm: ^0.3.1+beta
 
 dev_dependencies:
   flutter_test:
