--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   hive_flutter: ^1.1.0
   uuid: ^3.0.6
   rxdart: ^0.27.4
-  get:
+  webview_flutter: ^3.0.4
+  url_launcher: ^6.1.4
 
 dev_dependencies:
   flutter_test:
