--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   rxdart: ^0.27.4
   webview_flutter: ^3.0.4
   url_launcher: ^6.1.4
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
